test: improved send user 2FA email code endpoint
